@@ -32,8 +32,5 @@
 pl_module_plugin("PLImageLoaderEXR")
 	pl_module_vendor("Copyright (C) 2002-2010 by The PixelLight Team")
 	pl_module_license("GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version")
-	pl_module_description("Image loader for OpenEXR 1.4.0 (http://www.openexr.com/, 'exr'-extension) high dynamic range images")
-
-	// [TODO] Within debug mode, I currently get R6034 Windows error messages -> Update to current OpenEXR version and check again...
-	pl_module_active(0)
+	pl_module_description("Image loader for OpenEXR 1.6.1 (http://www.openexr.com/, 'exr'-extension) high dynamic range images")
 pl_module_end
