@@ -27,7 +27,6 @@
 
 
 
-
 /*********************************************************\
  *  The entries below are in german only
 \*********************************************************/
